[package]
name = "keyboard-interface"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["track_caller", "on_gba"]
track_caller = []
on_gba = []

[dependencies]
voladdress = "1.3.0"
bitfrob = "1"
bracer = "0.1.2"
critical-section = { version = "1.1.2", features = [
  "restore-state-bool",
], optional = true }
gba = "0.11.6"

[profile.dev]
opt-level = 3
incremental = false

[profile.dev.package."*"]
debug-assertions = false

[profile.release]
codegen-units = 1
incremental = false

[package.metadata.docs.rs]
# The crate can only be built for targets that have thumb-interworking support,
# because otherwise the instruction_set attribute can't be used.
targets = ["armv5te-unknown-linux-gnueabi"]
